adding rebelmouse to blog for test

--- a/app/views/blog_posts/index.html.haml
+++ b/app/views/blog_posts/index.html.haml
@@ -20,5 +20,5 @@
         .section
           = render :partial => "subscribe"
         .section
-          = render :partial => "popular_posts"
+          = render :partial => "rebelmouse"
 
