--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -4,6 +4,7 @@
       = render @post
       .social-media-horizontal
         = render :partial => "social_media_horizontal"
+        = render :partial => "/blog_posts/ratings/form"
       .comments
         = render :partial => "/shared/disqus"
     .col-md-3
