adding form for rating system

--- a/app/views/blog_posts/show.html.haml
+++ b/app/views/blog_posts/show.html.haml
@@ -3,8 +3,12 @@
     .col-md-9
       = render @post
       .social-media-horizontal
-        = render :partial => "social_media_horizontal"
-        = render :partial => "/blog_posts/ratings/form"
+        .row
+          .col-md-12.ratings
+            = render :partial => "/blog_posts/ratings/form"
+        .row
+          .col-md-12
+            = render :partial => "social_media_horizontal"
       .comments
         = render :partial => "/shared/disqus"
     .col-md-3
