--- a/app/views/blog_posts/ratings/_form.html.erb
+++ b/app/views/blog_posts/ratings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@post, @rating, remote:true] do |f| %>
+<%= form_for([@post, @rating], :remote => true) do |f| %>
   <% if @rating.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@rating.errors.count, "error") %> prohibited this rating from being saved:</h2>
