--- a/app/views/blog_posts/ratings/_summary.html.erb
+++ b/app/views/blog_posts/ratings/_summary.html.erb
@@ -1,4 +1,12 @@
-<div class="well">
+<div class="rubric">
+    <div class="row">
+    <div class="col-md-8">
+      <h2> Quality Rubric </h2>
+    </div>
+    <div class="col-md-4">
+      <p> The following are rated 1-10. </p>
+    </div>
+  </div>
   <div class="row">
     <div class="col-md-9">
       <table class="table">
