--- a/app/assets/stylesheets/blog.css
+++ b/app/assets/stylesheets/blog.css
@@ -147,3 +147,33 @@
     color: white; }
 .blog .comments {
   padding: 0 10px 20px; }
+
+.rubric {
+  background: #ececec;
+  border: 1px dashed #aaa;
+  margin: 0.3em 0 1em 0;
+  padding: 1.5em 2em 1em 2em;
+  border-radius: 0.5em; }
+  .rubric h2 {
+    margin-top: 0px;
+    margin-bottom: 16px; }
+  .rubric p {
+    color: #999;
+    margin-top: 7px;
+    margin-bottom: 0;
+    font-weight: 200; }
+  .rubric .field {
+    display: inline;
+    max-width: 75;
+    min-width: 60px;
+    float: left;
+    margin: 10px;
+    text-align: center; }
+    .rubric .field label {
+      font-size: 14px; }
+    .rubric .field input {
+      width: 55px;
+      display: inline; }
+  .rubric .btn {
+    margin-top: 36px;
+    margin-left: 23px; }
