--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -216,3 +216,37 @@
 
 }
 
+.rubric{
+  background:#ececec;
+  border: 1px dashed #aaa;
+  margin: 0.3em 0 1em 0;
+  padding: 1.5em 2em 1em 2em;
+  border-radius:0.5em;
+  h2{
+    margin-top:0px;
+    margin-bottom:16px;
+  }
+  p{
+    color:#999;
+    margin-top:7px;
+    margin-bottom:0;
+    font-weight:200;
+  }
+  .field{
+    display: inline;
+    max-width:75;
+    min-width:60px;
+    float:left;
+    margin:10px;
+    text-align:center;
+    label{ font-size:14px;    }
+    input{
+      width:55px;
+      display:inline;
+    }
+  }
+    .btn{ 
+      margin-top:36px;
+      margin-left:23px;
+    }
+}
