--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -37,13 +37,13 @@
       }
     }
     .sidebar{
-        h3{
-          color: #2fa2b8;
-          font-family: 'Muli', sans-serif;
-          border-bottom:1px solid #eee;
-          padding-bottom:10px;
-          margin-bottom:20px;
-        }
+      h3{
+        color: #2fa2b8;
+        font-family: 'Muli', sans-serif;
+        border-bottom:1px solid #eee;
+        padding-bottom:10px;
+        margin-bottom:20px;
+      }
       .sidebar-item{
         margin-bottom:10px;
         a{
@@ -232,21 +232,34 @@
     margin-bottom:0;
     font-weight:200;
   }
+  textarea{
+    margin-left:13px;
+    width:580px;
+  }
+
   .field{
-    display: inline;
-    max-width:75;
-    min-width:60px;
-    float:left;
-    margin:10px;
-    text-align:center;
-    label{ font-size:14px;    }
     input{
-      width:55px;
-      display:inline;
+      width:70px;
+      font-size:16px;
     }
   }
-    .btn{ 
-      margin-top:36px;
-      margin-left:23px;
-    }
+  .btn{ 
+    margin-top:36px;
+    margin-left:23px;
+  }
 }
+
+.hover-rubric{
+  width:350px;
+  p{
+    font-size:14px;
+    width:250px;
+    color: #666;
+  }
+  .table{
+    width:250px;
+    font-size:14px;
+    font-weight:300;
+  }
+}
+
