changed commits to match new text

--- a/app/views/blog_posts/ratings/_category_descriptions.html
+++ b/app/views/blog_posts/ratings/_category_descriptions.html
@@ -20,46 +20,51 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This blog post contains several highly important, relevant new pieces of information or analysis to the typical socially motivated job seeker</td>
+        <td>5</td><td>This research provides some highly important and relevant information that is new to some socially motivated job seekers. (Or moderately important information to a large proportion) </td>
       </tr>
       <tr>
-        <td>3</td><td> This blog post contains 1-2 moderately important, somewhat relevant new pieces of information or analysis to the typical socially motivated job seeker</td>
+        <td>3</td><td> This research provides some moderately important and relevant information that is new to some socially motivated job seekers.</td>
       </tr>
       <tr>
-        <td>1</td><td>This blog doesn't contains any important, relevant information or analysis to the typical socially motivated job seeker</td>
+        <td>1</td><td>This research doesn't contains any novel, important or relevant information to socially motivated job seekers</td>
       </tr>
       </tbody>
     </table>
+    <p>Note:</p>
+      <ul>
+        <li>Information is meant broadly to include data, analysis and conceptual considerations.</li>
+        <li>Important and relevant is meant with respect to the goal of changing people's career decisions for the better.</li>
+      </ul>
   </div>
 
     <div class="hover-rubric" id="practical">
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This blog post contains several highly important, relevant new pieces of information or analysis to a highly dedicated user of 80,000 Hours</td>
+        <td>5</td><td>This research provides some highly important and relevant information that is new to informed people in the effective altruism community.</td>
       </tr>
       <tr>
-        <td>3</td><td>This blog post contains 1-2 moderately important, somewhat relevant new pieces of information or analysis to a highly dedicated user of 80,000 Hours</td>
+        <td>3</td><td>This research provides some moderately important and relevant information that is new to informed people in the effective altruism community.</td>
       </tr>
       <tr>
-        <td>1</td><td>This blog doesn't contain any important, relevant information or analysis to a high dedicated user of 80,000 Hours</td>
+        <td>1</td><td>This research doesn't contains any novel, important or relevant information to informed people in the effective altruism community</td>
       </tr>
       </tbody>
     </table>
-    <p>Note: a 'highly dedicated user' is someone who'll spend many days working on their career decision and will seek out leaders in effective altruism to interview</p>
+    <p>Note: a 'dedicated user' is someone who'll spend many days working on their career decision and is already well involved in the effective altruism community. </p>
   </div>
 
     <div class="hover-rubric" id="persuasive">
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This research used the most relevant evidence, and the conclusions were based on a highly rigorous process</td>
+        <td>5</td><td>This research used the most appropriate evidence given the time available. The conclusions drawn are likely to be accurate and contained an appropriate level of qualification. Academic research was used appropriately where available (e.g. using reviews or multiple studies, regressions are treated with appropriate skepticism)</td>
       </tr>
       <tr>
-        <td>3</td><td>This research used some relevant evidence, and was based on a reasonable process, though the conclusions are likely to contain some moderate errors</td>
+        <td>3</td><td>This research used some relevant evidence, and was based on a reasonable process, though the conclusions may contain some errors and some conclusions may have been overstated.</td>
       </tr>
       <tr>
-        <td>1</td><td>This research used irrelevant evidence and a highly unreliable process</td>
+        <td>1</td><td>This research was based on a poor choice of evidence or used an unreliable process.</td>
       </tr>
       </tbody>
     </table>
@@ -68,13 +73,13 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td> The research and reasoning process is clearly flagged, such that it would be easy for a motivated user to check the reasoning</td>
+        <td>5</td><td> The research and reasoning process is clearly flagged, such that it would be easy for a motivated user to check the reasoning. What is known based on the evidence, what is unknown and the author's personal opinions are clearly flagged. Promising lines of further work are flagged so that it would be easy for others to build upon.</td>
       </tr>
       <tr>
-        <td>3</td><td> The research process is fairly clear, though there are several steps that would be difficult to check</td>
+        <td>3</td><td> The research process is fairly clear, though there are several steps that would be difficult to check or build upon. </td>
       </tr>
       <tr>
-        <td>1</td><td>It's completely unclear how this research was carried out and how the conclusions were reached</td>
+        <td>1</td><td>  It's completely unclear how this research was carried out and how the conclusions were reached.</td>
       </tr>
       </tbody>
     </table>
@@ -84,13 +89,13 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>The structure is highly clear, its well and clearly written, and its fun to read.</td>
+        <td>5</td><td>The structure is highly clear. The writing is concise, accurate and easy to understand. The post is easy to skim. Unnecessary jargon or technical terminology is avoided, and new terms are clearly explained.</td>
       </tr>
       <tr>
-        <td>3</td><td> The structure is good, it's fairly well written although contains some parts that are tough to understand, and it's moderately engaging.</td>
+        <td>3</td><td> This post has some important weak points in terms of structure and clarity, but is otherwise easy to understand.</td>
       </tr>
       <tr>
-        <td>1</td><td>It's very hard to understand and boring.</td>
+        <td>1</td><td>It's very hard to understand.</td>
       </tr>
       </tbody>
     </table>
@@ -100,13 +105,13 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>The structure is highly clear, its well and clearly written, and its fun to read.</td>
+        <td>5</td><td>This post is fun or memorable and motivating to read.</td>
       </tr>
       <tr>
-        <td>3</td><td> The structure is good, it's fairly well written although contains some parts that are tough to understand, and it's moderately engaging.</td>
+        <td>3</td><td>This post is somewhat engaging, though not particularly memorable.</td>
       </tr>
       <tr>
-        <td>1</td><td>It's very hard to understand and boring.</td>
+        <td>1</td><td>This post is boring.</td>
       </tr>
       </tbody>
     </table>
