--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -244,8 +244,8 @@
     }
   }
   .btn{ 
-    margin-top:36px;
-    margin-left:23px;
+    margin-top:71px;
+    margin-left:9px;
   }
 }
 
@@ -255,6 +255,14 @@
     font-size:14px;
     width:250px;
     color: #666;
+    font-weight:200;
+  }
+  ul{
+    width:250px;
+  }
+  li{
+    font-size:14px;
+    font-weight:200;
   }
   .table{
     width:250px;
