--- a/app/views/blog_posts/ratings/_category_descriptions.html
+++ b/app/views/blog_posts/ratings/_category_descriptions.html
@@ -4,7 +4,7 @@
      <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This post was one of the best posts on the website</td>
+        <td>5</td><td>This post was one of the best posts on the website.</td>
       </tr>
       <tr>
         <td>3</td><td> This is an average post.</td>
@@ -20,13 +20,13 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This research provides some highly important and relevant information that is new to some socially motivated job seekers. (Or moderately important information to a large proportion) </td>
+        <td>5</td><td>This research provides some highly important and relevant information that is new to some socially motivated job seekers. (Or moderately important information to a large proportion). </td>
       </tr>
       <tr>
         <td>3</td><td> This research provides some moderately important and relevant information that is new to some socially motivated job seekers.</td>
       </tr>
       <tr>
-        <td>1</td><td>This research doesn't contains any novel, important or relevant information to socially motivated job seekers</td>
+        <td>1</td><td>This research doesn't contains any novel, important or relevant information to socially motivated job seekers.</td>
       </tr>
       </tbody>
     </table>
@@ -47,7 +47,7 @@
         <td>3</td><td>This research provides some moderately important and relevant information that is new to informed people in the effective altruism community.</td>
       </tr>
       <tr>
-        <td>1</td><td>This research doesn't contains any novel, important or relevant information to informed people in the effective altruism community</td>
+        <td>1</td><td>This research doesn't contains any novel, important or relevant information to informed people in the effective altruism community.</td>
       </tr>
       </tbody>
     </table>
@@ -58,7 +58,7 @@
     <table  class="table">
       <tbody>
       <tr>
-        <td>5</td><td>This research used the most appropriate evidence given the time available. The conclusions drawn are likely to be accurate and contained an appropriate level of qualification. Academic research was used appropriately where available (e.g. using reviews or multiple studies, regressions are treated with appropriate skepticism)</td>
+        <td>5</td><td>This research used the most appropriate evidence given the time available. The conclusions drawn are likely to be accurate and contained an appropriate level of qualification. Academic research was used appropriately where available (e.g. using reviews or multiple studies, regressions are treated with appropriate skepticism).</td>
       </tr>
       <tr>
         <td>3</td><td>This research used some relevant evidence, and was based on a reasonable process, though the conclusions may contain some errors and some conclusions may have been overstated.</td>
@@ -118,7 +118,7 @@
   </div>
 
     <div class="hover-rubric" id="total">
-      <p> This score represents the sum of the scores for "original", "practical", "persuasive", "transparent","accessible", and "engaging".
+      <p> This score represents the sum of the scores for "original", "voi", "expert voi", "process","transparent", "accessible", and "engaging".
       It does not include the "overall" score.
       </p>
   </div>
