--- a/app/views/blog_posts/ratings/_summary.html.erb
+++ b/app/views/blog_posts/ratings/_summary.html.erb
@@ -16,7 +16,7 @@
   </div>
 
 </div>
-    <%= link_to 'Complete Rubric', blog_post_ratings_path(@post)  %>
+    <%= link_to 'See complete rubric', blog_post_ratings_path(@post)  %>
     <br>
     <br>
 <%= render :partial => '/blog_posts/ratings/category_descriptions' %>
