--- a/app/views/blog_posts/ratings/_categories.html.erb
+++ b/app/views/blog_posts/ratings/_categories.html.erb
@@ -2,15 +2,15 @@
   <% if empty == true %>
     <th></th>
 <% end %>
-  <th> <span id="overall"  data-toggle="popover" data-placement="bottom" data-title="What is your overall rating for this post?" >Overall</span> </th>
-  <th> <span id="original"  data-toggle="popover" data-placement="bottom" data-title="New information to average users: How much new, important, relevant information and analysis is there for a typical socially motivated job seeker?" >Original</span> </th>
-  <th> <span id="practical"  data-toggle="popover" data-placement="bottom" data-title="New information to dedicated users: How much new, important, relevant information and analysis is there for a dedicated user of 80,000 Hours?">Practical</span> </th>
-  <th> <span id="persuasive"  data-toggle="popover" data-placement="bottom" data-title="Good Process: Are the conclusions drawn from a process that's likely to lead to the truth? Were the most relevant sources of evidence used?" >Persuasive</span> </th>
-  <th> <span id="transparent"  data-toggle="popover" data-placement="bottom" data-title="Is it clear how the conclusions were drawn from the evidence?" >Transparent</span> </th>
-  <th> <span id="accessible"  data-toggle="popover" data-placement="bottom" data-title="Is this blog post engaging and easy to understand?">Accessible</span> </th>
-  <th> <span id="engaging"  data-toggle="popover" data-placement="bottom" data-title="Is this blog post engaging and easy to understand?" >Engaging</span> </th>
+  <th> <span id="overall"  data-toggle="popover" data-placement="bottom" data-title="What is your gut judgement about how good quality the research is in this post?" >Overall</span> </th>
+  <th> <span id="practical"  data-toggle="popover" data-placement="bottom" data-title="Does this research provide important, relevant information that is new to socially motivated job seekers?">VOI</span> </th>
+  <th> <span id="original"  data-toggle="popover" data-placement="bottom" data-title="Does this research provide important and relevant information that is new to informed people in the effective altruism community?" >Expert VOI</span> </th>
+  <th> <span id="persuasive"  data-toggle="popover" data-placement="bottom" data-title="Was the research carried out using a rigorous and reliable method?" >Process</span> </th>
+  <th> <span id="transparent"  data-toggle="popover" data-placement="bottom" data-title="Is it clear how this research was carried out?" >Transparency</span> </th>
+  <th> <span id="accessible"  data-toggle="popover" data-placement="bottom" data-title="Is this post easy to understand?">Clarity</span> </th>
+  <th> <span id="engaging"  data-toggle="popover" data-placement="bottom" data-title="Is this post fun to read?" >Engagingness</span> </th>
   <% if total == true %>
-    <th> <span id="total"  data-toggle="popover" data-placement="bottom" data-title="The Total" >Total</span> </th>
+    <th> <span id="total"  data-toggle="popover" data-placement="bottom" data-title="The total" >Total</span> </th>
 <% end %>
   <% if defined?(comment) and comment == true %>
     <th> <span id="comment"  data-toggle="popover" data-placement="bottom" data-title="Comment" >Comment</span> </th>
