--- a/app/assets/stylesheets/blog.css.scss
+++ b/app/assets/stylesheets/blog.css.scss
@@ -234,7 +234,8 @@
   }
   textarea{
     margin-left:13px;
-    width:580px;
+    width: 94%;
+    height: 200px;
   }
 
   .field{
@@ -244,8 +245,7 @@
     }
   }
   .btn{ 
-    margin-top:71px;
-    margin-left:9px;
+    margin-top:13px;
   }
 }
 
