--- a/app/views/blog_posts/ratings/_categories.html.erb
+++ b/app/views/blog_posts/ratings/_categories.html.erb
@@ -6,11 +6,11 @@
   <th> <span id="practical"  data-toggle="popover" data-placement="bottom" data-title="Does this research provide important, relevant information that is new to socially motivated job seekers?">VOI</span> </th>
   <th> <span id="original"  data-toggle="popover" data-placement="bottom" data-title="Does this research provide important and relevant information that is new to informed people in the effective altruism community?" >Expert VOI</span> </th>
   <th> <span id="persuasive"  data-toggle="popover" data-placement="bottom" data-title="Was the research carried out using a rigorous and reliable method?" >Process</span> </th>
-  <th> <span id="transparent"  data-toggle="popover" data-placement="bottom" data-title="Is it clear how this research was carried out?" >Transparency</span> </th>
+  <th> <span id="transparent"  data-toggle="popover" data-placement="bottom" data-title="Is it clear how this research was carried out?" >Transparent</span> </th>
   <th> <span id="accessible"  data-toggle="popover" data-placement="bottom" data-title="Is this post easy to understand?">Clarity</span> </th>
-  <th> <span id="engaging"  data-toggle="popover" data-placement="bottom" data-title="Is this post fun to read?" >Engagingness</span> </th>
+  <th> <span id="engaging"  data-toggle="popover" data-placement="bottom" data-title="Is this post fun to read?" >Engaging</span> </th>
   <% if total == true %>
-    <th> <span id="total"  data-toggle="popover" data-placement="bottom" data-title="The total" >Total</span> </th>
+    <th> <span id="total"  data-toggle="popover" data-placement="bottom" data-title="The total" >Average</span> </th>
 <% end %>
   <% if defined?(comment) and comment == true %>
     <th> <span id="comment"  data-toggle="popover" data-placement="bottom" data-title="Comment" >Comment</span> </th>
