added new rubric details

--- a/app/views/blog_posts/ratings/_category_descriptions.html
+++ b/app/views/blog_posts/ratings/_category_descriptions.html
@@ -16,7 +16,7 @@
     </table> 
   </div>
 
-    <div class="hover-rubric" id="original">
+    <div class="hover-rubric" id="practical">
     <table  class="table">
       <tbody>
       <tr>
@@ -37,7 +37,7 @@
       </ul>
   </div>
 
-    <div class="hover-rubric" id="practical">
+    <div class="hover-rubric" id="original">
     <table  class="table">
       <tbody>
       <tr>
@@ -117,7 +117,7 @@
   </div>
 
     <div class="hover-rubric" id="total">
-      <p> This score represents the sum of the scores for "original", "voi", "expert voi", "process","transparent", "accessible", and "engaging".
+      <p> This score represents the average of the scores for "original", "voi", "expert voi", "process","transparent", "accessible", and "engaging".
       It does not include the "overall" score.
       </p>
   </div>
